version/2.0/_sources/index.rst.txt
Ansys SCADE Wrapper Tools
=========================

Refer to the Section *Generating Integration Code from SCADE Suite*, in the
document *SCADE Products API Resources* of the SCADE Suite documentation,
for a complete reference of SCADE Code Generator extensions, A.K.A wrappers.

This package contains:

* A SCADE Code Generator extension, `Generic Integration`, that produces
  a standalone executable and schedules optional additional wrappers.
* Utility SCADE Code Generator generation services that can be involved
  by wrappers.
* A Python library for developing wrappers.

Contents
--------

.. toctree::
   :maxdepth: 1

   getting_started/index
   usage/index
   api/index
   runtime/index
   contributing
   changelog

Indices and tables
-------------------

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
