version/2.1/_sources/index.rst.txt
Ansys SCADE Wrapper Tools
=========================

Refer to *Generating Integration Code* in section 3 of the *SCADE Python API Guide*
in the SCADE Suite documentation for a complete reference on SCADE Code Generator extensions,
also known as wrappers.

This package contains:

* A SCADE Code Generator extension, `Generic Integration`, that produces
  a standalone executable and schedules optional additional wrappers.
* Utility SCADE Code Generator generation services that can be involved
  by wrappers.
* A Python library for developing wrappers.


.. grid:: 1 2 3 3
    :gutter: 1 2 3 3
    :padding: 1 2 3 3

    .. grid-item-card:: :material-regular:`power_settings_new;1.25em` Getting started
      :link: getting-started/index
      :link-type: doc

      Learn how to install and use Ansys SCADE Wrapper Tools.

    .. grid-item-card:: :material-regular:`description;1.25em` User guide
      :link: usage/index
      :link-type: doc

      Learn how to use the Ansys SCADE Wrapper Tools.

    .. grid-item-card:: :material-regular:`code;1.25em` API reference
      :link: api/index
      :link-type: doc

      Explore the Ansys SCADE Wrapper Tools API.

    .. grid-item-card:: :material-regular:`schedule;1.25em` Runtime
      :link: runtime/index
      :link-type: doc

      Learn reference for the C/C++ interfaces

    .. grid-item-card:: :material-regular:`group;1.25em` Contributing
      :link: contributing
      :link-type: doc

      Learn how to contribute to the Ansys SCADE Wrapper Tools.

    .. grid-item-card:: :material-regular:`update;1.25em` Changelog
      :link: changelog
      :link-type: doc

      View the changelog for the Ansys SCADE Wrapper Tools.


.. toctree::
   :maxdepth: 1
   :hidden:

   getting-started/index
   usage/index
   api/index
   runtime/index
   contributing
   changelog

Indices and tables
-------------------

* :ref:`genindex`
* :ref:`modindex`
* :ref:`search`
